--- a/views/index.twig
+++ b/views/index.twig
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>EVA</title>
-        <script defer src="template/common/aside.js"></script>
+        {# <script defer src="template/common/aside.js"></script> #}
         <script defer src="./common.js"></script>
         <script defer src="./@popperjs/core/dist/umd/popper.min.js"></script>
         <script defer src="./js/bootstrap.min.js"></script>
