--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -7,6 +7,9 @@
       </a> #}
     </h6>
     <ul class="p-2 sidebar-list nav btn-group-vertical columnLeft">
+      {% for element in asideList %}
+        <li class="nav-item"><a class="nav-link btn" href="{{element.href}}">{{ element.text }}</a></li>
+      {% endfor %} 
     </ul>
   </div>
 </div>
