--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -8,7 +8,7 @@
     </h6>
     <ul class="p-2 sidebar-list nav btn-group-vertical columnLeft">
       {% for element in asideList %}
-        <li class="nav-item"><a class="nav-link btn" href="{{element.href}}">{{ element.text }}</a></li>
+        <li class="nav-item"><a class="nav-link btn" href="{{element.href}}">{{ element.title }}</a></li>
       {% endfor %} 
     </ul>
   </div>
