--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -1,5 +1,5 @@
 <div id="column-left" class="sidebar h-100">
-  <div class="h-100" id="sidebarMenu" style="overflow-y:scroll;">
+  <div class="h-100" id="sidebarMenu">
     <h6 class="d-flex justify-content-between text-muted">
       <span class="m-auto d-block menu-title mt-3">{{ text_configmenu }}</span>
       {# <a class="link-secondary" href="#" aria-label="Add a new class">
