--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -65,15 +65,14 @@
             <label for="input-email">E-mail:</label>
             <div class="input-group">
               <input type="text" name="email" value="" placeholder="email@example.com" id="input-email" class="form-control"/>            
-            </div> 
-            {# <hr class="form-group-divider"> #}
+            </div>
             <label for="input-password">Password:</label>            
             <div class="input-group">
               <input type="password" name="password" value="" placeholder="Password" id="input-password" class="form-control"/>                            
             </div>                                     
-            <label for="input-Cpassword">Confirm password:</label>            
+            <label for="input-confirmpass">Confirm password:</label>
             <div class="input-group">
-              <input type="password" name="confirmpass" value="" placeholder="Password" id="input-confirmpass" class="form-control"/>                            
+             <input type="password" name="confirmpass" value="" placeholder="Password" id="input-confirmpass" class="form-control"/>
             </div>  
             <label for="input-eauth">Enterprise authentication:</label>            
             <div class="form-group">
