--- a/views/template/common/footer.twig
+++ b/views/template/common/footer.twig
@@ -2,5 +2,5 @@
     <a href="https://eva.brainrs.com">EVA © 2023 Brain Retail Service LLC</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
     <!--<a href="https://eva.brainrs.com/documentation" target="_blank">Документация</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;-->
     <a href="https://github.com/JetBrain2056">Repository GitHub</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-    {{ text_version }}&nbsp;{{ Version }}_{{ lang }}
+    <p>{{ text_version }}&nbsp;{{ Version }}_{{ lang }}</p>
 </footer>
