--- a/views/index.twig
+++ b/views/index.twig
@@ -13,20 +13,18 @@
         <link href="./font-awesome/css/font-awesome.min.css" rel="stylesheet">
         <link href="./stylesheet/stylesheet.css" rel="stylesheet">
     </head>
-    <body class="h-100">
-        <div class="wrapper d-flex flex-column h-100">
-            {% include "./template/common/header.twig" %}
-            {% if logged %}
-                <div class="bg-light content flex-grow-1 h-100">
-                <div class = "row h-100">  
-                    <div class="col-2 list">{% include "./template/common/column_left.twig" %}</div>
-                    <div class="col">{% include "./template/common/dashboard.twig" %}</div>
+    <body>        
+        {% include "./template/common/header.twig" %}
+        {% if logged %}
+            <div class="content flex-grow-1 d-flex flex-row bg-light">                    
+                <div class="col-2 list" style="overflow-y: scroll">
+                    {% include "./template/common/column_left.twig" %}
                 </div>
+                <div class="col">{% include "./template/common/dashboard.twig" %}</div>                                        
             </div>
-            {% else %}
-                {% include "./template/common/login.twig" %}
-            {% endif %}
-            {% include "./template/common/footer.twig" %}
-        </div>
+        {% else %}
+            {% include "./template/common/login.twig" %}
+        {% endif %}
+        {% include "./template/common/footer.twig" %}        
     </body>
 </html>
