--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,4 +1,4 @@
-<div class="flex-grow-1 h-100 border bg-light">
+<div class="flex-grow-1 border bg-light">
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users&nbsp;&nbsp;<i class="fa fa-times"></i></button>
@@ -37,8 +37,8 @@
           </div>
         </div>
       </div>
-      <div class="h-100 overflow-scroll">
-        <table id="user_table"  class="h-100 table table-striped table-hover table-sm table-responsive"></table>
+      <div  style="overflow-y: scroll; height:calc(100vh - 171px)">
+        <table id="user_table"  class="table table-striped table-hover table-sm table-responsive"></table>
       </div>
     </div>
   </div>
