--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -37,9 +37,7 @@
           </div>
         </div>
       </div>
-      <div  style="overflow-y: scroll; height:calc(100vh - 171px)">
-        <table id="user_table"  class="table table-striped table-hover table-sm table-responsive"></table>
-      </div>
+      <div class="eva-form"></div>
     </div>
   </div>
 </div>
