--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -16,8 +16,11 @@ body {
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	text-rendering: optimizeLegibility;	
-	font-size: 13px;
+	font-size: 13px;		
+}
 
+.content {		
+	height: 100vh
 }
 
 a, .nav-link{
@@ -29,10 +32,6 @@ a, .nav-link{
 header {
 	background-color: #282c34;	
 	font-size: 16px;
-}
-
-.content {	
-	height:calc(100vh - 100px)
 }
 
 footer {
