--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,4 +1,4 @@
-<div class="flex-grow-1 border bg-light">
+<div class="">
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users&nbsp;&nbsp;<i class="fa fa-times"></i></button>
@@ -41,7 +41,7 @@
     </div>
   </div>
 </div>
-{# {% include "./security.twig" %} #}
+
 {# Modal User #}
 <div class="modal fade" id="usersModal" tabindex="-1" aria-labelledby="usersModalLabel" aria-hidden="true">
   <div class="modal-dialog">
