--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -1,4 +1,4 @@
-<div class="login d-flex flex-grow-1" style="height:calc(100vh - 92px)">
+<div class="login flex-grow-1">
     <div class="container-fluid">
         {% if success %}
             <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}
