--- a/views/index.twig
+++ b/views/index.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
         <title>EVA</title>            
         <script defer src="./common.js"></script>
         <script defer src="./@popperjs/core/dist/umd/popper.min.js"></script>
