--- a/views/index.twig
+++ b/views/index.twig
@@ -18,10 +18,10 @@
             {% include "./template/common/header.twig" %}  
             {% if logged %}                             
                 <div class="d-flex flex-row flex-grow-1">                    
-                    <div class="col-2 list" style="overflow-y: scroll">
+                    <div class="col-2 sidebar" style="overflow-y: scroll">
                         {% include "./template/common/column_left.twig" %}
                     </div>
-                    <div class="col" style=";">
+                    <div class="col">
                         {% include "./template/common/dashboard.twig" %}
                     </div>                    
                 </div>                             
