--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,11 +1,11 @@
-<div class="">
-  <nav>
+{# <div class=""> #}
+  {# <nav> #}
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users&nbsp;&nbsp;<i class="fa fa-times"></i></button>
       <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Dashboard&nbsp;&nbsp;<i class="fa fa-times"></i></button>
       {# <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button> #}
     </div>
-  </nav>
+  {# </nav> #}
   <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
       <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
@@ -36,11 +36,11 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="eva-form"></div>
-    </div>
+      </div>           
+      <div class="eva-form"></div>      
+    </div>    
   </div>
-</div>
+{# </div> #}
 
 {# Modal User #}
 <div class="modal fade" id="usersModal" tabindex="-1" aria-labelledby="usersModalLabel" aria-hidden="true">
