--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -72,6 +72,10 @@
           <div class="input-group">
             <input type="password" name="confirmpass" value="" placeholder="Password" id="input-confirmpass" class="form-control"/>
           </div>
+          <label for="input-eauth">Show user:</label>
+          <div class="form-group">
+            <input type="checkbox" class="form-check-input" name="swow" id="input-show" checked/>
+          </div>
           <label for="input-eauth">Enterprise authentication:</label>
           <div class="form-group">
             <input type="checkbox" class="form-check-input" name="eauth" id="input-eauth" checked/>
@@ -89,7 +93,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="userEditModalLabel">Редактирровать пользователя</h5>
+        <h5 class="modal-title" id="userEditModalLabel">Редактировать пользователя</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
@@ -101,6 +105,11 @@
           <label for="input-descr">Descr:</label>
           <div class="input-group">
             <input type="text" name="Descr" value="" placeholder="Full name" id="input-edit-descr" class="form-control"/>
+          </div>
+          <label for="input-role">Role:</label>
+          <div class="input-group">
+            <input type="text" id="input-edit-role" class="form-control"/>
+             <button class="btn btn-outline-secondary" type="button" id="input-edit-role" onclick="unit_edit_role()">...</button>
           </div>
           <label for="input-email">E-mail:</label>
           <div class="input-group">
@@ -114,7 +123,11 @@
           <div class="input-group">
             <input type="password" name="confirmpass" value="" placeholder="Password" id="input-edit-confirmpass" class="form-control"/>
           </div>
-          <label for="input-eauth">Enterprise authentication:</label>
+          <label for="input-show">Show user:</label>
+          <div class="form-group">
+            <input type="checkbox" class="form-check-input" name="swow" id="input-show" checked/>
+          </div>
+          <label for="input-eauth">Enterprise auth:</label>
           <div class="form-group">
             <input type="checkbox" class="form-check-input" name="eauth" id="input-edit-eauth" checked/>
           </div>
