--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -18,10 +18,11 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">    
                 <div class="nav-item flex-column" aria-orientation="vertical">
                   <button class="dropdown-item" id="nav-users-tab" data-bs-toggle="tab" data-bs-target="#nav-users" type="button" role="tab" aria-controls="nav-users" aria-selected="false" onclick="show_user_table()">{{ text_users }}</button>                    
-                  <button class="dropdown-item">Настройки подключеня БД</button>                  
+                  <button class="dropdown-item">Роли</button>                  
+                  <button class="dropdown-item">Настройки БД</button>                  
                 </div>
               </ul>
-            </li>  
+            </li>         
             <li class="nav-item">
               <a class="nav-link d-flex gap-1 align-items-center" aria-current="page" href="#">
                 <img src="{{ image }}" alt="logo" width="30" height="30" id="user-profile" class="img-circle" />
