--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -62,6 +62,7 @@
           </div>
           <label for="input-role">Role:</label>
           <div class="input-group">
+            <input type="text" id="input-roleId" class="form-control" hidden/>
             <input type="text" id="input-role" class="form-control"/>
             <button class="btn btn-outline-secondary" type="button" id="input-role" onclick="user_edit_role()">...</button>
           </div>
@@ -81,7 +82,7 @@
           <div class="form-group">
             <input type="checkbox" class="form-check-input" name="swow" id="input-show" checked/>
           </div>
-          <label for="input-eauth">Enterprise authentication:</label>
+          <label for="input-eauth">Enterprise auth:</label>
           <div class="form-group">
             <input type="checkbox" class="form-check-input" name="eauth" id="input-eauth" checked/>
           </div>
@@ -113,6 +114,7 @@
           </div>
           <label for="input-edit-role">Role:</label>
           <div class="input-group">
+            <input type="text" id="input-edit-roleId" class="form-control" hidden/>
             <input type="text" id="input-edit-role" class="form-control"/>
              <button class="btn btn-outline-secondary" type="button" id="input-edit-role" onclick="user_edit_role()">...</button>
           </div>
