--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -116,7 +116,7 @@
           <div class="input-group">
             <input type="text" id="input-edit-roleId" class="form-control" hidden/>
             <input type="text" id="input-edit-role" class="form-control"/>
-             <button class="btn btn-outline-secondary" type="button" id="input-edit-role" onclick="user_edit_role()">...</button>
+             <button class="btn btn-outline-secondary" type="button" onclick="user_edit_role()">...</button>
           </div>
           <label for="input-email">E-mail:</label>
           <div class="input-group">
