--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -23,7 +23,7 @@
                 <label for="input-username">{{ entry_username }}</label>
                 <div class="input-group  gap-2">
                     <span class="input-group-text" id="btnGroupAddon"><i class="fa fa-user"></i></span>
-                    <input type="text" name="username" value="{{ username }}" placeholder="{{ entry_username }}" id="input-username" class="form-control" aria-describedby="btnGroupAddon">
+                    <input type="text" name="username" value="{{ username }}" placeholder="Admin" id="input-username" class="form-control" aria-describedby="btnGroupAddon">
                 </div>
             </div>
             <div>
