--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,13 +1,14 @@
 {# <div class=""> #}
   {# <nav> #}
-    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users&nbsp;&nbsp;<i class="fa fa-times"></i></button>
-      <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Dashboard&nbsp;&nbsp;<i class="fa fa-times"></i></button>
+    {# <div class="nav nav-tabs" id="nav-tab" role="tablist"> #}
+      {# <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users&nbsp;&nbsp;<i class="fa fa-times"></i></button> #}
+      {# <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Dashboard&nbsp;&nbsp;<i class="fa fa-times"></i></button> #}
       {# <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button> #}
-    </div>
-  {# </nav> #}
+    {# </div> #}
+  {# </nav> #}  
   <div class="tab-content" id="nav-tabContent">
-    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+   {# Users [0] #}
+    <div class="tab-pane fade show active" id="nav-users" role="tabpanel" aria-labelledby="nav-users-tab">
       <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
         <div class="btn-group btn-group-sm" role="group">
           <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#usersModal">
@@ -39,7 +40,31 @@
       </div>           
       <div class="eva-form"></div>      
     </div>    
-  </div>
+    {# Roles [1] #}
+    <div class="tab-pane fade" id="nav-roles" role="tabpanel" aria-labelledby="nav-roles-tab">
+      <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
+        <div class="btn-group btn-group-sm" role="group">
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#rolesModal">
+            <i class="fa fa-user-plus"></i>
+            <span>{{ button_add }}</span>
+          </button>
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#rolesEditModal" onclick="roles_edit_modal()">
+            <i class="fa fa-edit"></i>
+            <span>{{ button_edit }}</span>
+          </button>
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
+            <i class="fa fa-clone" aria-hidden="true"></i>
+            <span>{{ button_copy }}</span>
+          </button>
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="role_delete()">
+            <i class="fa fa-user-times"></i>
+            <span>{{ button_delete }}</span>
+          </button>
+        </div>
+      </div>           
+      <div class="eva-form"></div>  
+    </div>
+  </div>  
 {# </div> #}
 
 {# Modal User #}
@@ -144,7 +169,7 @@
     </div>
   </div>
 </div>
-{# Modal Edit User Role [1] #}
+{# Modal Edit User Role [2] #}
 <div class="modal modal-lg fade" id="editUserRoleModal" aria-hidden="true">
   <div class="modal-dialog  modal-dialog-scrollable">
     <div class="modal-content">
