--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -7,21 +7,23 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav align-items-center gap-2">
+          <ul class="nav navbar-nav align-items-center gap-2" id="nav-tab" role="tablist">                              
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Конфигурация</a>
-            </li>            
+                <a class="nav-link" id="" data-bs-toggle="tab" data-bs-target="#nav-home"  role="tab" aria-controls="" aria-selected="false">
+                  Конфигурация
+                </a>
+            </li>       
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="true">
                 Администрирование
-              </a>
+              </a>                          
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">    
                 <div class="nav-item flex-column" aria-orientation="vertical">
                   <button class="dropdown-item" id="nav-users-tab" data-bs-toggle="tab" data-bs-target="#nav-users" type="button" role="tab" aria-controls="nav-users" aria-selected="false" onclick="show_user_table()">{{ text_users }}</button>                    
-                  <button class="dropdown-item">Роли</button>                  
+                  <button class="dropdown-item" id="nav-roles-tab" data-bs-toggle="tab" data-bs-target="#nav-roles" type="button"  role="tab" aria-controls="nav-roles" aria-selected="false" onclick="show_role_table()">Роли</button>                  
                   <button class="dropdown-item">Настройки БД</button>                  
                 </div>
-              </ul>
+              </ul>              
             </li>         
             <li class="nav-item">
               <a class="nav-link d-flex gap-1 align-items-center" aria-current="page" href="#">
