--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="nav navbar-nav align-items-center gap-2" id="nav-tab" role="tablist">                              
             <li class="nav-item">
-                <a class="nav-link" id="" data-bs-toggle="tab" data-bs-target="#nav-home"  role="tab" aria-controls="" aria-selected="false">
+                <a class="nav-link" id="" data-bs-toggle="tab" data-bs-target=""  role="tab" aria-controls="" aria-selected="false">
                   Конфигурация
                 </a>
             </li>       
