--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -19,10 +19,10 @@
             <i class="fa fa-edit"></i>
             <span>{{ button_edit }}</span>
           </button>
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
+          {# <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
             <i class="fa fa-clone" aria-hidden="true"></i>
             <span>{{ button_copy }}</span>
-          </button>
+          </button> #}
           <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="user_delete()">
             <i class="fa fa-user-times"></i>
             <span>{{ button_delete }}</span>
