--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -21,9 +21,11 @@
             </div>
             <div class="form-group">
                 <label for="input-username">{{ entry_username }}</label>
-                <div class="input-group  gap-2">
-                    <span class="input-group-text" id="btnGroupAddon"><i class="fa fa-user"></i></span>
-                    <input type="text" name="username" value="{{ username }}" placeholder="Admin" id="input-username" class="form-control" aria-describedby="btnGroupAddon">
+                <div class="input-group gap-2">
+                    <div class="input-group-text" for="input-username"><i class="fa fa-user"></i></div>                    
+                    <select type="text" name="username" value="{{ username }}" class="form-select form-control" id="input-username">
+                        <option selected>  </option>
+                    </select>
                 </div>
             </div>
             <div>
