--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="nav navbar-nav align-items-center gap-2" id="nav-tab" role="tablist">                              
             <li class="nav-item">
-                <a class="nav-link" id="" data-bs-toggle="tab" data-bs-target=""  role="tab" aria-controls="" aria-selected="false">
+                <a class="nav-link active"  href="" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"  role="tab" aria-controls="nav-config" aria-selected="false">
                   Конфигурация
                 </a>
             </li>       
@@ -19,8 +19,12 @@
               </a>                          
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">    
                 <div class="nav-item flex-column" aria-orientation="vertical">
-                  <button class="dropdown-item" id="nav-users-tab" data-bs-toggle="tab" data-bs-target="#nav-users" type="button" role="tab" aria-controls="nav-users" aria-selected="false" onclick="show_user_table()">{{ text_users }}</button>                    
-                  <button class="dropdown-item" id="nav-roles-tab" data-bs-toggle="tab" data-bs-target="#nav-roles" type="button"  role="tab" aria-controls="nav-roles" aria-selected="false" onclick="show_role_table()">Роли</button>                  
+                  <button class="dropdown-item" id="nav-users-tab" data-bs-toggle="tab" data-bs-target="#nav-users" type="button" role="tab" aria-controls="nav-users" aria-selected="false" onclick="show_user_table()">
+                    {{ text_users }}
+                  </button>                    
+                  <button class="dropdown-item" id="nav-roles-tab" data-bs-toggle="tab" data-bs-target="#nav-roles" type="button"  role="tab" aria-controls="nav-roles" aria-selected="false" onclick="show_role_table()">
+                    Роли
+                  </button>                  
                   <button class="dropdown-item">Настройки БД</button>                  
                 </div>
               </ul>              
