--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -252,10 +252,18 @@
       </div>
       <div class="modal-body">
         <form class="form" id="create-config-form">  
-          <label for="input-descr">Data:</label>
+          <label for="input-descr">Type:</label>
           <div class="input-group">
-            <input type="text" placeholder="Data" id="input-data" class="form-control"/>
+            <input type="text" placeholder="0" id="input-typeId" class="form-control"/>
           </div>         
+          <label for="input-descr">textId:</label>
+          <div class="input-group">
+            <input type="text" placeholder="0" id="input-textId" class="form-control"/>
+          </div>  
+          <label for="input-descr">Parent:</label>
+          <div class="input-group">
+            <input type="text" placeholder="..." id="input-parent" class="form-control"/>
+          </div>  
         </form>
       </div>
       <div class="modal-footer">
