--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,96 +1,87 @@
-{# <div class=""> #}
-  {# <nav> #}
-    {# <div class="nav nav-tabs" id="nav-tab" role="tablist"> #}
-      {# <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users&nbsp;&nbsp;<i class="fa fa-times"></i></button> #}
-      {# <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Dashboard&nbsp;&nbsp;<i class="fa fa-times"></i></button> #}
-      {# <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button> #}
-    {# </div> #}
-  {# </nav> #}  
-  <div class="tab-content" id="nav-tabContent">
-    {# Config [0] #}
-    <div class="tab-pane fade active show" id="nav-config" role="tabpanel" aria-labelledby="nav-confi-tab">
-      <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
+<div class="tab-content" id="nav-tabContent">
+  {# Config [0] #}
+  <div class="tab-pane fade active show" id="nav-config" role="tabpanel" aria-labelledby="nav-confi-tab">
+    <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
+      <div class="btn-group btn-group-sm" role="group">
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#configModal">
+          <i class="fa fa-user-plus"></i>
+          <span>{{ button_add }}</span>
+        </button>
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" data-bs-toggle="modal" data-bs-target="#configEditModal" onclick="confi_edit_modal()">
+          <i class="fa fa-edit"></i>
+          <span>{{ button_edit }}</span>
+        </button>
+        {# <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
+          <i class="fa fa-clone" aria-hidden="true"></i>
+          <span>{{ button_copy }}</span>
+        </button> #}
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="config_delete()">
+          <i class="fa fa-user-times"></i>
+          <span>{{ button_delete }}</span>
+        </button>
         <div class="btn-group btn-group-sm" role="group">
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#configModal">
-            <i class="fa fa-user-plus"></i>
-            <span>{{ button_add }}</span>
-          </button>
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#configEditModal" onclick="confi_edit_modal()">
-            <i class="fa fa-edit"></i>
-            <span>{{ button_edit }}</span>
-          </button>
-          {# <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
-            <i class="fa fa-clone" aria-hidden="true"></i>
-            <span>{{ button_copy }}</span>
-          </button> #}
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="config_delete()">
-            <i class="fa fa-user-times"></i>
-            <span>{{ button_delete }}</span>
-          </button>
-          <div class="btn-group btn-group-sm" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
-            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-              <li><a class="dropdown-item d-flex gap-2 align-items-center"><i class="fa fa-refresh"></i>{{ button_update }}</a></li>
-              <li><a class="dropdown-item">{{ button_etc}}</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item">...</a></li>
-            </ul>
-          </div>
+          <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
+          <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            <li><a class="dropdown-item d-flex gap-2 align-items-center"><i class="fa fa-refresh"></i>{{ button_update }}</a></li>
+            <li><a class="dropdown-item">{{ button_etc}}</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item">...</a></li>
+          </ul>
         </div>
-      </div>           
-      <div class="eva-form"></div>      
-    </div> 
-    {# Users [1] #}
-    <div class="tab-pane fade" id="nav-users" role="tabpanel" aria-labelledby="nav-users-tab">
-      <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
+      </div>
+    </div>           
+    <div class="eva-form"></div>      
+  </div> 
+  {# Users [1] #}
+  <div class="tab-pane fade" id="nav-users" role="tabpanel" aria-labelledby="nav-users-tab">
+    <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
+      <div class="btn-group btn-group-sm" role="group">
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#usersModal">
+          <i class="fa fa-user-plus"></i>
+          <span>{{ button_add }}</span>
+        </button>
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" data-bs-toggle="modal" data-bs-target="#userEditModal" onclick="user_edit_modal()">
+          <i class="fa fa-edit"></i>
+          <span>{{ button_edit }}</span>
+        </button>
+        {# <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
+          <i class="fa fa-clone" aria-hidden="true"></i>
+          <span>{{ button_copy }}</span>
+        </button> #}
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="user_delete()">
+          <i class="fa fa-user-times"></i>
+          <span>{{ button_delete }}</span>
+        </button>
         <div class="btn-group btn-group-sm" role="group">
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#usersModal">
-            <i class="fa fa-user-plus"></i>
-            <span>{{ button_add }}</span>
-          </button>
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#userEditModal" onclick="user_edit_modal()">
-            <i class="fa fa-edit"></i>
-            <span>{{ button_edit }}</span>
-          </button>
-          {# <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
-            <i class="fa fa-clone" aria-hidden="true"></i>
-            <span>{{ button_copy }}</span>
-          </button> #}
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="user_delete()">
-            <i class="fa fa-user-times"></i>
-            <span>{{ button_delete }}</span>
-          </button>
-          <div class="btn-group btn-group-sm" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
-            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-              <li><a class="dropdown-item d-flex gap-2 align-items-center"><i class="fa fa-refresh"></i>{{ button_update }}</a></li>
-              <li><a class="dropdown-item">{{ button_etc}}</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item">...</a></li>
-            </ul>
-          </div>
+          <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
+          <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            <li><a class="dropdown-item d-flex gap-2 align-items-center"><i class="fa fa-refresh"></i>{{ button_update }}</a></li>
+            <li><a class="dropdown-item">{{ button_etc}}</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item">...</a></li>
+          </ul>
         </div>
-      </div>           
-      <div class="eva-form"></div>      
-    </div>    
-    {# Roles [2] #}
-    <div class="tab-pane fade" id="nav-roles" role="tabpanel" aria-labelledby="nav-roles-tab">
-      <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
-        <div class="btn-group btn-group-sm" role="group">
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#roleModal">
-            <i class="fa fa-plus-square"></i>
-            <span>{{ button_add }}</span>
-          </button>
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="role_delete()">
-            <i class="fa fa-minus-square"></i>
-            <span>{{ button_delete }}</span>
-          </button>
-        </div>
-      </div>           
-      <div class="eva-form"></div>  
-    </div>
-  </div>  
-{# </div> #}
+      </div>
+    </div>           
+    <div class="eva-form"></div>      
+  </div>    
+  {# Roles [2] #}
+  <div class="tab-pane fade" id="nav-roles" role="tabpanel" aria-labelledby="nav-roles-tab">
+    <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
+      <div class="btn-group btn-group-sm" role="group">
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#roleModal">
+          <i class="fa fa-plus-square"></i>
+          <span>{{ button_add }}</span>
+        </button>
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="role_delete()">
+          <i class="fa fa-minus-square"></i>
+          <span>{{ button_delete }}</span>
+        </button>
+      </div>
+    </div>           
+    <div class="eva-form"></div>  
+  </div>
+</div>  
 
 {# Modal User #}
 <div class="modal fade" id="usersModal" tabindex="-1" aria-labelledby="usersModalLabel" aria-hidden="true">
@@ -205,7 +196,7 @@
       <div class="modal-body">          
         <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">          
           <div class="btn-group btn-group-sm" role="group">
-            <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="role_select()">
+            <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="role_select()">
               <i class=""></i>
               <span>Выбрать</span>
             </button>    
